# advent-of-code-2024

./: Cargo.toml  README.md  test.sh
inputs/: day02-invalid.txt  day1-list-invalid-lines.txt  day1-list-invalid-pairs-b.txt  day1-list-invalid-pairs.txt
src/: day01.rs  day01_test.rs  day02.rs  day02_test.rs  day03.rs  day03_test.rs  day1.rs  error.rs  main.rs
