[package]
name = "advent-of-code-2024"
description = "Advent of Code 2024 Solvers"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
repository = "https://github.com/maclema/advent-of-code-2024"
keywords = ["rust", "advent", "of", "code", "clippy"]
readme = "README.md"
categories = ["advent-of-code"]
